syntax = "proto3";

package api;

option go_package = "github.com/broady/tygor/examples/protobuf/api";

// [snippet:proto-messages]

// CreateItemRequest is the request to create an item.
message CreateItemRequest {
  string name = 1;
  string description = 2;
  int64 price_cents = 3;
  repeated string tags = 4;
}

// Item represents an item in the catalog.
message Item {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 price_cents = 4;
  repeated string tags = 5;
}
// [/snippet:proto-messages]

// ListItemsRequest is the request to list items.
message ListItemsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

// ListItemsResponse contains a list of items.
message ListItemsResponse {
  repeated Item items = 1;
  int32 total = 2;
}

// GetItemRequest is the request to get an item by ID.
message GetItemRequest {
  int64 id = 1;
}
